--- a/public/frontend/assets/css/login.css
+++ b/public/frontend/assets/css/login.css
@@ -63,7 +63,7 @@
 .login_section .login_content .submit_btn{
     padding: 2.7rem 7rem;
 }
-.login_section .login_content .submit_btn a{
+.login_section .login_content .submit_btn button{
     padding: 1.6rem;
     display: block;
     background-color: var(--blue);
@@ -73,6 +73,8 @@
     font-weight: 700;
     line-height: 3.3rem;
     border-radius: 6.8px;
+    border: 0;
+    width: 100%;
 }
 .login_section .login_content h3{
     padding-bottom: 2.7rem;
@@ -102,7 +104,7 @@
     width: 100%;
 }
 .login_section .social_btns a:not(:last-child),
-.login_section .submit_btns a:not(:last-child){
+.login_section .submit_btns button:not(:last-child){
     margin-right: 1.6rem;
 
 }
@@ -113,23 +115,25 @@
     font-family: 'inter',sans-serif;
     color: #000;
 }
-.login_section .submit_btns a{
+.login_section .submit_btns button{
     font-size: 2.5rem;
     line-height: 3.3rem;
     font-weight: 700;
     font-family: 'Ruposhi Bangla Unicode';
 }
-.login_section .submit_btns a.submit{
+.login_section .submit_btns button.submit{
     background: var(--blue);
     color: var(--white);
     padding: 1.6rem 0;
     width: 100%;
+    border: 0;
 }
-.login_section .submit_btns a.otp{
+.login_section .submit_btns button.otp{
     background: #E0E0E0;
     color: #4F4F4F;
     padding: 1.6rem 0;
     width: 100%;
+    border: 0;
 
 }
 .login_section .social_btns a img{
