--- a/public/frontend/assets/css/header.css
+++ b/public/frontend/assets/css/header.css
@@ -128,6 +128,61 @@
     height       : 0;
 }
 
+/* user login dropdown start */
+.nav-item.user_login_icon {
+    position: relative;
+    padding: 3.7rem 0;
+}
+.nav-item.user_login_icon>a {
+    position: relative;
+    display: inline-block;
+    padding-right: 2rem;
+}
+.nav-item.user_login_icon>a::after {
+    content: '';
+    /* display: inline-block; */
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    background-image: url(../images/icons/down-arrow-green.svg);
+    background-repeat: no-repeat;
+    background-size: 1.3rem .9rem;
+    width: 1.3rem;
+    height: .9rem;
+
+}
+.nav-item.user_login_icon>a>img {
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+}
+.user_login_dropdown {
+    position: absolute;
+    top: 10.8rem;
+    right: -2.8rem;
+    background: #FFFFFF;
+    min-width: 148px;
+    padding: 2rem;
+    text-align: right;
+    opacity: 0;
+    visibility: hidden;
+}
+.nav-item.user_login_icon:hover .user_login_dropdown {
+    opacity: 1;
+    visibility: visible;
+}
+.user_login_dropdown li:not(:last-child) {
+    margin-bottom: 1.6rem;
+}
+.user_login_dropdown li>a {
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+    font-weight: bold;
+    color: var(--black);
+}
+/* user login dropdown end */
+
 .user_login:hover .nav_login_form {
     opacity: 1;
     height : auto;
