--- a/public/frontend/assets/css/header.css
+++ b/public/frontend/assets/css/header.css
@@ -183,6 +183,38 @@
 }
 /* user login dropdown end */
 
+/* small device user dropdown start */
+.sm_user_login {
+    padding: 0 3.4rem 2.4rem;
+}
+.sm_user_login button {
+    background: transparent;
+    border: 0;
+    width: 100%;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+    color: var(--white);
+}
+.sm_user_login button>img {
+    width: 1.3rem;
+    height: .9rem;
+}
+.sm_user_login_dropdown>ul {
+    padding: 1.6rem;
+}
+.sm_user_login_dropdown li:not(:last-child) {
+    margin-bottom: 1.6rem;
+}
+.sm_user_login_dropdown li>a {
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+    font-weight: bold;
+    color: var(--white);
+}
+
+/* small device user dropdown end */
+
 .user_login:hover .nav_login_form {
     opacity: 1;
     height : auto;
@@ -362,7 +394,7 @@
 }
 
 .side_header {
-    height    : 251px;
+    height    : auto;
     background: #4F7F6C;
     position  : relative;
 }
