all navbar links fixed

--- a/public/frontend/assets/css/checkout.css
+++ b/public/frontend/assets/css/checkout.css
@@ -13,7 +13,7 @@
     padding-bottom: 12rem;
 }
 
-.checkout_box h1 {
+.checkout_container h1 {
     font-weight  : bold;
     font-size    : 4rem;
     line-height  : 6rem;
