--- a/public/frontend/assets/css/checkout.css
+++ b/public/frontend/assets/css/checkout.css
@@ -94,7 +94,7 @@
 }
 
 
-.form-check-input[type=checkbox] {
+.form-check-input[type=radio] {
     border-radius: 0 !important;
 }
 
@@ -104,7 +104,7 @@
 
 }
 
-.form-check-input:checked[type=checkbox] {
+.form-check-input:checked[type=radio] {
     background-image   : url('../images/icons/fi_check.svg');
     background-size    : 1.2rem;
     background-position: center center;
@@ -183,20 +183,15 @@
     margin-bottom: 5.2rem;
 }
 
-#sslczPayBtn.confirm_bn::before, 
-#sslczPayBtn.confirm_bn::after {
-    content: none !important;
-}
-#sslczPayBtn.confirm_bn {
-    font-weight     : bold !important;
-    font-size       : 2rem !important;
-    line-height     : 3rem !important;
-    color           : #FFFFFF !important;
-    padding         : 1.2rem !important;
-    background-color: #4F7F6C !important;
-    border          : none !important;
-    width           : 100% !important;
-    height           : auto !important;
+.confirm_bn {
+    font-weight     : bold;
+    font-size       : 2rem;
+    line-height     : 3rem;
+    color           : #FFFFFF;
+    padding         : 1.2rem;
+    background-color: #4F7F6C;
+    border          : none;
+    width           : 100%;
 }
 
 .checkout_box2 {
