register added, login modified

--- a/public/frontend/assets/css/common.css
+++ b/public/frontend/assets/css/common.css
@@ -159,6 +159,22 @@ a.btn_more {
     background-color: #5F1A1B;
     opacity: 1;
 }
+
+/* new account create link */
+.new_account_create {
+    text-align: center;
+    padding-top: 1.6rem;
+}
+.new_account_create a {
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+.new_account_create a:hover {
+    color: var(--blue);
+}
+
 /* ==custom container width== */
 @media (min-width: 1366px) {
     .container {
