--- a/public/frontend/assets/css/login.css
+++ b/public/frontend/assets/css/login.css
@@ -4,19 +4,13 @@
 
 .login_section{
     text-align: center; 
-<<<<<<< HEAD
     margin: 0;
-<<<<<<< HEAD
-=======
-=======
     margin: 4rem 0;
->>>>>>> 033a0ba2bbf5ae7589d4dc3de2fac6ca36ae4c2a
 }
 .login_section .login_container{
     display: flex;
     flex: 0 0 63.9rem;
     align-items: center;
->>>>>>> e283631028ceb13c00619f4a91e55646bb1f9034
 }
 .login_section .login_container{
     box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
@@ -63,7 +57,7 @@
 .login_section .login_content .submit_btn{
     padding: 2.7rem 7rem;
 }
-.login_section .login_content .submit_btn button{
+.login_section .login_content .submit_btn a, .login_section .login_content .submit_btn button {
     padding: 1.6rem;
     display: block;
     background-color: var(--blue);
@@ -73,6 +67,8 @@
     font-weight: 700;
     line-height: 3.3rem;
     border-radius: 6.8px;
+}
+.login_section .login_content .submit_btn button {
     border: 0;
     width: 100%;
 }
@@ -106,7 +102,6 @@
 .login_section .social_btns a:not(:last-child),
 .login_section .submit_btns button:not(:last-child){
     margin-right: 1.6rem;
-
 }
 .login_section .social_btns a{
     font-size: 2.2rem;
@@ -115,25 +110,24 @@
     font-family: 'inter',sans-serif;
     color: #000;
 }
-.login_section .submit_btns button{
+.login_section .submit_btns a, .login_section .submit_btns button{
     font-size: 2.5rem;
     line-height: 3.3rem;
     font-weight: 700;
     font-family: 'Ruposhi Bangla Unicode';
+    border: 0;
 }
-.login_section .submit_btns button.submit{
+.login_section .submit_btns a.submit, .login_section .submit_btns button.submit{
     background: var(--blue);
     color: var(--white);
     padding: 1.6rem 0;
     width: 100%;
-    border: 0;
 }
-.login_section .submit_btns button.otp{
+.login_section .submit_btns a.otp, .login_section .submit_btns button.otp {
     background: #E0E0E0;
     color: #4F4F4F;
     padding: 1.6rem 0;
     width: 100%;
-    border: 0;
 
 }
 .login_section .social_btns a img{
@@ -156,6 +150,52 @@
     color: #828282;
     border-radius: 5px;
 }
+.new_account_create.lnpage a {
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+/* register page */
+.register_content{
+    padding-top: 8.2rem;
+    padding-bottom: 6.5rem;
+    max-width: 75.1rem;
+    margin: auto;
+}
+.register_content h2 {
+    margin-bottom: 6rem;
+}
+
+.login_section .register_content .input_fild{
+    padding: 1.3rem;
+}
+.login_section .register_content .input_fild input {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    font-weight: 700;
+    border: 1px solid var(--black);
+    padding: 1.2rem 1.6rem;
+}
+.login_section .reg_container{
+    padding-left: 3.5rem;
+}
+.login_section .login_content .reg_btn{
+    max-width: 35.5rem;
+    margin: auto;
+    padding: 0;
+    margin-top: 5.1rem;
+    font-weight: 400;
+}
+
+.input_fild label{
+    display: block;
+    text-align: left;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 24px;
+    color: #333333;
+    margin-bottom: 0.4rem;
+}
 
 /* `xxxl` applies to xx-large devices (large desktops, less than 1680px) */
 @media (min-width: 1679.98px) {
@@ -169,12 +209,9 @@
     }
     .login_section .social_btns{
         padding:  1.6rem 7rem;
-        margin-bottom: 2.6rem;
-
     }
     .login_section .input_fild{
         padding: 2.7rem 7rem ;
-    
     }
 }
 
@@ -228,6 +265,11 @@
     .login_section .social_btns a {
         font-size: 1.6rem;
         line-height: 2.3rem;
+    }
+
+    .register_content{
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
     }
 
 }
