--- a/public/frontend/assets/css/cards.css
+++ b/public/frontend/assets/css/cards.css
@@ -6,17 +6,17 @@
 
 /* ==book cards with bg== */
 .book_card_with_bg_section {
-    padding-top: 1.8rem;
+    padding-top: 3.5rem;
 }
 .book_card_with_bg_section .row {
-    margin-top: -6rem;
+    margin-top: -4.5rem;
     margin-bottom: -6rem;
     margin-left: -2.4rem;
     margin-right: -2.4rem;
 }
 .book_card_with_bg_section .row>* {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+    padding-top: 4.5rem;
+    padding-bottom: 4.2rem;
     padding-left: 2.4rem;
     padding-right: 2.4rem;
 }
@@ -35,8 +35,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 33.2rem;
-    height: 33.2rem;
+    width: 28rem;
+    height: 28rem;
     /* background: #DBF2F8; */
     border-radius: 50%;
     opacity: 0.3;
@@ -51,7 +51,7 @@
 .circle_bg img {
     filter: drop-shadow(15px 20px 35px rgba(42, 70, 66, 0.2));
     border-radius: 1rem;
-    max-width: 20.7rem;
+    max-width: 16rem;
     width: 100%;
 }
 .circle_bg img {
@@ -73,20 +73,23 @@
     margin: 0 auto;
 }
 .book_card_wrapper .image_wrapper {
-    filter: drop-shadow(15px 20px 35px rgba(42, 70, 66, 0.2));
+    /* filter: drop-shadow(15px 20px 35px rgba(42, 70, 66, 0.2)); */
     border-radius: 1rem;
     position: relative;
+    box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
+    -webkit-box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
+    -moz-box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
 }
 .book_card_wrapper .image_wrapper img {
     border-radius: 1rem;
 }
 .book_card_wrapper .content_wrapper {
-    padding-top: 3.8rem;
+    padding-top: 2rem;
 }
 
 .book_card_content h3.title {
     font-size: 2rem;
-    line-height: 3.6rem;
+    line-height: 2.8rem;
     font-weight: bold;
     margin-top: 0.6rem;
 }
@@ -98,16 +101,17 @@
 }
 .book_card_content .price_wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 2.2rem 0;
+    padding: 1.2rem 0;
 }
 .book_card_content h6.discount {
     text-decoration-line: line-through;
+    margin-right: 1.2rem;
 }
 .book_card_content h5.regular {
-    font-size: 2.4rem;
-    line-height: 3.6rem;
+    font-size: 2rem;
+    line-height: 2.8rem;
     font-weight: bold;
 }
 .book_card_content a.btn_buy_now {
@@ -126,7 +130,11 @@
 /* ==writer card== */
 .writer_content{
     text-align: center;
-    filter: drop-shadow(10px 20px 20px rgba(0, 0, 0, 0.15));
+}
+.writer_img_wrapper {
+    box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
+    -webkit-box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
+    -moz-box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
 }
 .writer_content .card_text{
     padding-top: 2.2rem;
@@ -135,8 +143,8 @@
     border-radius: 1rem;
 }
 .writer_content h3 {
-    font-size: 2.4rem;
-    line-height: 2.6rem;
+    font-size: 2.2rem;
+    line-height: 2.8rem;
     font-weight: 700;
     color: var(--blue);
 }
@@ -175,8 +183,14 @@
 
 @media (max-width: 1679.98px) {
     .circle_bg::before {
-        width: 30rem;
-        height: 30rem;
+        width: 28rem;
+        height: 28rem;
+    }
+}
+@media (max-width: 1399.98px) {
+    .circle_bg::before {
+        width: 28rem;
+        height: 28rem;
     }
 }
 @media (max-width: 767.98px) {
@@ -210,14 +224,20 @@
 
 @media (max-width: 575.98px) {
     .book_card_with_bg_section .row {
-        margin-top: -2.6rem;
-        margin-bottom: -2.6rem;
+        margin-top: 0;
+        margin-bottom: -4.5rem;
     }
     .book_card_with_bg_section .row>* {
-        padding-top: 2.3rem;
-        padding-bottom: 2.3rem;
+        padding-top: 0;
+        padding-bottom: 2.8rem;
+        padding-left: 5rem;
+        padding-right: 5rem;
     }
-        /* ==writers page== */
+    .book_card_with_bg_section .row>col:last-child {
+        padding-bottom: 0rem;
+    }
+
+    /* ==writers page== */
     .writer_cards_section .row{
         margin-top: -4rem;
         margin-left: -2.3rem;
@@ -232,13 +252,13 @@
         width: 16rem;
         height: 16rem;
     }
-    .circle_bg img {
+    /* .circle_bg img {
         transform: scale(.7);
-    }
+    } */
     .card_with_bg h6 {
         font-size: 2.2rem;
         line-height: 3.3rem;
-        margin-top: 2.4rem;
+        margin-top: 1.4rem;
     }
 
     .new_published_card .jq-ry-container {
