--- a/public/frontend/assets/css/header.css
+++ b/public/frontend/assets/css/header.css
@@ -867,29 +867,25 @@
 }
 
 /* Navbar Responsive */
-@media (max-width: 1600.98px) {
+@media (max-width: 1679.98px) {
     .user_login_icon {
         margin-left: 3rem;
     }
-}
-
-@media (max-width: 1600.98px) {
-    /* .user_login_icon {
-        margin-left: 2rem;
-    } */
-
     .nav_search {
         width: 40rem;
     }
 }
 
-@media (max-width: 1200.98px) {
+@media (max-width: 1199.98px) {
     .nav_search {
         width: 30rem;
     }
 }
 
 @media (max-width: 991.98px) {
+    .navbar-toggler {
+        padding: 0;
+    }
     .mobileCart {
         display: block;
     }
@@ -1123,8 +1119,8 @@
     right: 0;
     background-color: #FFFFFF;
     padding:0 1.7rem;
-    /* visibility        : hidden;
-    opacity           : 0; */
+    visibility        : hidden;
+    opacity           : 0;
     -webkit-transition: visibility 0s, opacity 0.6s cubic-bezier(0.22, 0.61, 0.36, 1);
     transition        : visibility 0s, opacity 0.6s cubic-bezier(0.22, 0.61, 0.36, 1);
     z-index: 100;
