--- a/public/frontend/assets/css/home.css
+++ b/public/frontend/assets/css/home.css
@@ -59,18 +59,21 @@
     align-items: center;
 }
 .new_published_card .image_wrapper {
-    flex: 0 0 22.9rem;
-    max-width: 22.9rem;
+    flex: 0 0 17.5rem;
+    max-width: 17.5rem;
     width: 100%;
-    filter: drop-shadow(20px 20px 35px rgba(0, 0, 0, 0.13));
+    /* filter: drop-shadow(20px 20px 35px rgba(0, 0, 0, 0.13)); */
     border-radius: 1rem;
+    box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
+    -webkit-box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
+    -moz-box-shadow: 0px 10px 20px -8px rgba(0,0,0,0.26);
 }
 .new_published_card .image_wrapper img {
     border-radius: 1rem;
 }
 .new_published_card .content_wrapper {
     /* background: #E7F6F5; */
-    padding: 3.5rem 3.5rem 3.5rem 2.8rem;
+    padding: 2.5rem 2.5rem 2.5rem 2.8rem;
     position: relative;
 }
 .new_published_carousel_wrapper .owl-item:nth-child(odd) .new_published_card .content_wrapper {
@@ -82,6 +85,9 @@
 
 
 /* ==carousel button > new published book== */
+.new_published_book_section .sc_title_wrapper {
+    margin-bottom: 0;
+}
 .new_published_book_carousel .owl-nav button, .writers_carousel .owl-nav button{
     position: absolute;
     top: 50%;
@@ -119,17 +125,65 @@
 .most_selling_book_carousel .owl-nav button.owl-next{
     right: 0;
 }
+@media (max-width: 1679.98px) {
+    .new_published_card .image_wrapper {
+        flex: 0 0 20.5rem;
+        max-width: 20.5rem;
+    }
+}
+@media (max-width: 1366px) {
+    .most_selling_book_carousel .item{
+        padding: 4rem 8rem 0;
+    }
+    .writers_carousel .item{
+        padding: 4rem 8rem 0;
+    }
+    .new_published_card .image_wrapper {
+        flex: 0 0 17.5rem;
+        max-width: 17.5rem;
+    }
+    .new_published_card .content_wrapper {
+        padding: 2.5rem 0.5rem 0.5rem 0.8rem;
+    }
+    .book_card_content h6.discount {
+        margin-right: .3rem;
+    }
 
-
+    .circle_bg img {
+        max-width: 15rem;
+    }
+    .book_card_content h3.title {
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+    }
+    .book_card_content h5.regular {
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+    }
+    .book_card_content p.author, .book_card_content h6.discount {
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+    }
+}
 @media (min-width: 1366px) {
     /* ==new published book== */
     .new_published_carousel_wrapper .container {
         max-width: 1340px;
     }
     .new_published_book_carousel .item {
-        padding: 4rem 4rem 10rem 4rem;
+        padding: 4rem 0rem 3.2rem 1rem;
+    }
+    .new_published_card .image_wrapper {
+        flex: 0 0 16.5rem;
+        max-width: 16.5rem;
     }
     /* ==most selling books== */
+    .most_selling_book_section{
+        padding-top: 3.2rem;
+    }
+    .most_selling_book_section .sc_title_wrapper{
+        margin-bottom: 0;
+    }
     .most_selling_carousel_wrapper .container {
         max-width: 1366px;
     }
@@ -138,6 +192,13 @@
     }
 
     /* ==writers== */
+    .writer_section_slider{
+        padding-top: 3rem;
+        padding-bottom: 0rem;
+    }
+    .writer_section_slider .sc_title_wrapper{
+        margin-bottom: 0;
+    }
     .writers_carousel_wrapper .container {
         max-width: 1340px;
     }
@@ -156,19 +217,18 @@
     .most_selling_carousel_wrapper .container {
         max-width: 1420px;
     }
-    .most_selling_carousel_wrapper .item {
+    /* .most_selling_carousel_wrapper .item {
         padding: 4rem 8rem 0 8rem;
-    }
+    } */
 
     /* ==writers== */
     .writers_carousel_wrapper .container {
         max-width: 1400px;
     }
     .writers_carousel_wrapper .item {
-        padding: 4rem 5rem;
+        padding: 4rem 5rem 0;
     }
 }
-@media (min-width: 1680px) {}
 
 @media (min-width: 1920px) {
     /* ==new published book== */
@@ -176,14 +236,14 @@
         max-width: 1735px;
     }
     .new_published_book_carousel .item {
-        padding: 4rem 5rem 10rem 5rem;
+        padding: .8rem 1rem 6rem 2rem;
     }
     /* ==most selling books== */
     .most_selling_carousel_wrapper .container {
         max-width: 1795px;
     }
     .most_selling_carousel_wrapper .item {
-        padding: 4rem 8rem 0 8rem;
+        padding: .8rem 8rem 0 8rem;
     }
 
     /* ==writers== */
@@ -191,7 +251,7 @@
         max-width: 1735px;
     }
     .writers_carousel_wrapper .item {
-        padding: 4rem 5rem;
+        padding: .8rem 7rem 2rem;
     }
 }
 
@@ -200,26 +260,15 @@
 
 
 
-@media (max-width: 1679.98px) {
-    /* .new_published_card .image_wrapper img {
-        transform: scale(.8);
-    } */
-    .new_published_card .image_wrapper {
-        flex: 0 0 20.5rem;
-        max-width: 20.5rem;
-    }
-}
+
 @media (max-width: 991.98px) {
     .btn_box_smd {
         text-align: center;
         margin-top: 4.8rem;
     }
     .new_published_book_section {
-        padding-bottom: 120px;
+        padding: 4.5rem 0;
     }
-    /* .new_published_card .image_wrapper img {
-        transform: scale(1);
-    } */
     .searvices_section .searvices{
         margin-bottom: 7rem;
     }
@@ -233,12 +282,21 @@
         top: 355px;
         margin: auto;
     }
+    .book_card_content h6.discount {
+        margin-right: 1.5rem;
+    }
+    .new_published_book_carousel .item{
+        padding-top: 4.5rem;
+    }
+    .new_published_book_carousel .owl-dots, .common_carousel .owl-dots {
+        padding-top: 4.5rem;
+    }
+    .most_selling_carousel_wrapper .item {
+        padding: 4.5rem 8rem 0 8rem;
+    }
 }
 
 @media (max-width: 767.98px) {
-    .most_selling_carousel_wrapper .item {
-        padding: 6rem 8rem 0 8rem;
-    }
     .writers_carousel_wrapper .item {
         padding: 4rem 6rem;
     }
@@ -269,23 +327,54 @@
     .searvices_section .searvices::after{
         top: 275px;
     }
+    .most_selling_book_section .sc_title_wrapper {
+        margin-bottom: 0;
+    }
+    .writer_section_slider .sc_title_wrapper {
+        margin-bottom: 0;
+    }
    
 }
 @media (max-width: 575.98px) {
+    .popular_topics_section .book_card_with_bg_section {
+        padding-top: 3rem;
+    }
     .most_selling_carousel_wrapper .container{
         padding: 0;
     }
     .writers_carousel_wrapper .container{
         padding: 0;
     }
+    .new_published_book_section {
+        padding-top: 3rem;
+        padding-bottom: 3rem;
+
+    }
+    .btn_box_smd {
+        text-align: center;
+        margin-top: 3.2rem;
+    }
+    .most_selling_carousel_wrapper .item {
+        padding: 3rem 4rem 0 4rem;
+    }
+    .new_published_carousel_wrapper{
+        margin-top: 3.2rem;
+    }
     .new_published_carousel_wrapper .container{
         padding: 0;
     }
+    .writer_section_slider{
+        padding-top: 3.2rem;
+    }
+    .writers_carousel_wrapper .item {
+        padding: 3rem 4rem 0;
+    }
+
     .new_published_book_section.pb-70 {
         padding-bottom: 9.2rem;
     } 
     .new_published_book_carousel .item {
-        padding: 6rem 2rem 8rem 2rem;
+        padding: 0rem 2rem 3rem 2rem;
     }
 
     .searvices_section .searvices::after{
